--- a/src/test/resources/PARAMETERS/Config.properties
+++ b/src/test/resources/PARAMETERS/Config.properties
@@ -2,3 +2,4 @@ driverPathChrome=F:\\Automation Support\\Browsers\\chromedriver.exe
 driverPathFF=F:\\Automation Support\\Browsers\\geckodriver.exe
 implicitlyWait=30
 url=https://www.flipkart.com/
+screnshotName=validationImage1
